Avoid the synth lagging too far behind the clock.

--- a/src/autopianola.scss
+++ b/src/autopianola.scss
@@ -56,6 +56,15 @@ body {
   height: $button-size;
 }
 
+/* UTILITY */
+.unselectable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+  -webkit-touch-callout: none;
+}
+
 /* SCREEN */
 @media only screen and (min-width:40em) {
   html {
